--- a/Projects/Cat_Website/css/main.css
+++ b/Projects/Cat_Website/css/main.css
@@ -1,22 +1,127 @@
-.hide-mobile
-{
+.hide-mobile {
     display: none;
 }
 
-body
-{
+body {
     background-color: #FFFBF3;
     margin: 0;
     font-family: 'Lato';
 }
 
-.wrap
-{
+.wrap {
     margin: 2em;
 }
 
-header
-{
+header {
     display: flex;
     justify-content: space-between;
+}
+
+nav ul {
+    background-color: white;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    margin: 0;
+    list-style: none;
+    width: 40%;
+    text-align: right;
+    padding: 2em;
+    transform: translateX(100%);
+    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+    li {
+        margin: 2em 0;
+
+        &:nth-of-type(1) {
+            margin-bottom: 4em;
+        }
+
+        a {
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.5rem;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+    }
+}
+
+.open {
+    transform: translateX(0%);
+}
+
+h1, p {
+    text-align: center;
+}
+
+h1 {
+    margin-top: 3em;
+
+    img {
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+
+a.primary-cta {
+    background-color: #FFA800;
+    padding: 1em;
+    /* width: calc(100% - 2em); */
+    width: 100%;
+    box-sizing: border-box;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.3rem;
+    color: black;
+    border-radius: .3em;
+}
+
+.cat {
+    position: relative;
+    height: 500px;
+    width: 100%;
+    margin-top: 3em;
+
+    img {
+        width: 70%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .inner-circle, .outer-circle {
+        position: absolute;
+        border-radius: 50%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .inner-circle {
+        background: #FFEBC3;
+        width: 300px;
+        height: 300px;
+        z-index: -1;
+    }
+
+    .outer-circle {
+        background: white;
+        width: 500px;
+        height: 500px;
+        z-index: -2;
+    }
 }
