--- a/Projects/Do_01/index.css
+++ b/Projects/Do_01/index.css
@@ -1,3 +1,35 @@
 .p1{
     font-style: italic;
 }
+body{
+    background-color: #FFFBF3;
+}
+/* .box {
+    width: 100px;
+    height: 120px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 0.2em;
+    padding: 10px;
+    margin: 10px;
+} */
+
+/*  */
+
+.box {
+    width: 200px;               /* Set the width of the box */
+    height: 100px;              /* Set the height of the box */
+    background-color: white;  /* Background color */
+    border: 3px solid black;     /* Border properties */
+    padding: 10px;              /* Space inside the box */
+    color: black;               /* Text color */
+    text-align: center;         /* Center text */
+    margin: 10px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap; /* Allows the boxes to wrap into new rows */
+    justify-content: space-between;
+/* Spaces the boxes evenly */
+}
