--- a/Projects/ToDoList/style.css
+++ b/Projects/ToDoList/style.css
@@ -5,6 +5,7 @@
 }
 body {
     height: 100vh;
+    background-color: #d1d3d4;
 }
 .app {
     width: min(95vw, 31.25em);
@@ -31,6 +32,7 @@ body {
     background-color: transparent;
     color: #111111;
     font-size: 0.9em;
+    border: none;
     border-bottom: 2px solid #d1d3d4;
     padding: 1em 0.5em;
 }
@@ -48,6 +50,81 @@ body {
     outline: none;
     color: #ffffff;
     cursor: pointer;
+}
+#tasks{
+    margin-top: 1em;
+    border-radius: 0.5em;
+    width: 100%;
+    position: relative;
+    padding: 1em 0.5em;
+}
+.task {
+    background-color: #ffffff;
+    padding: 0.8em 1em;
+    display: grid;
+    grid-template-columns: 1fr 8fr 2fr 2fr;
+    gap: 1em;
+    border-radius: 0.5em;
+    box-shadow: 0 0.5em 1em rgba(0,0,0,0.05);
+    align-items: center;
+    cursor: pointer;
+}
+.task:not(:first-child) {
+    margin-top: 1em;
+}
+.task input[type="checkbox"] {
+    position: relative;
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #e1e1e1;
+}
+.task input[type="checkbox"]:before {
+    content: "";
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+.task input[type="checkbox"]:checked {
+    background-color: #5a95ff;
+    border-color: #5a95ff;
+}
+.task input[type="checkbox"]:checked:before {
+    position: absolute;
+    content: "\f00c";
+    color: #ffffff;
+    font-size: 0.8em;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+.task span {
+    font: 0.9em;
+    font-weight: 400;
+    word-break: break-all;
+}
+.task button {
+    color: #ffffff;
+    width: 100%;
+    padding: 1em 0;
+    border-radius: 0.5em;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.edit {
+    background-color: #5a95ff;
+}
+.delete {
+    background-color: #ff5c5c;
+}
+#pending-tasks span {
+    color: #5a95ff;
+}
+.completed {
+    text-decoration: line-through;
+    color: #a0a0a0;
 }
 #error {
     text-align: center;
