--- a/L7_Dom_Part2/style.css
+++ b/L7_Dom_Part2/style.css
@@ -5,3 +5,11 @@
     border: 1px solid black;
     text-align: center;
 }
+
+.content {
+    color: red;
+}
+
+.newClass {
+    background-color: green;
+}
