--- a/L8_Events/style.css
+++ b/L8_Events/style.css
@@ -6,3 +6,13 @@ div {
     border: 1px solid black;
     padding: 5px;
 }
+
+.dark {
+    background-color: black;
+    color: white;
+}
+
+.light {
+    background-color: white;
+    color: black;
+}
