--- a/Projects/Tic_Tac_Toe/style.css
+++ b/Projects/Tic_Tac_Toe/style.css
@@ -44,3 +44,26 @@ body {
     border-radius: 0.5rem;
     border: none;
 }
+
+#new-btn {
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #191913;
+    color: #fff;
+    border-radius: 1rem;
+    border: none;
+}
+
+#msg {
+    color: #ffffc7;
+    font-size: 5vmin;
+}
+
+.msg-container {
+    height: 20vmin;
+    gap: 4rem;
+}
+
+.hide {
+    display: none;
+}
